fix extra padding in posts with no media

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -29,6 +29,10 @@
     --accent1-50: #9c5fff50;
 }
 
+body.reduced-motion {
+    transition: 0s!important;
+}
+
 body {
     font-family: var(--font1);
     margin: 0px;
@@ -326,7 +330,11 @@ textarea {
 
     border: 2px solid transparent;
 
-    color: var(--txt2);
+    color: var(--txt1);
+}
+
+.postArea-visibility-option:not(:first-child) {
+    margin-top: 4px;
 }
 
 .postArea-visibility-option span {
@@ -344,8 +352,8 @@ textarea {
 }
 
 .postArea-visibility-option:hover {
-    background-color: var(--bg2);
-    border: 2px solid transparent;
+    background-color: var(--bg4-50);
+    border: 2px solid var(--bg4-50);
     border-radius: 5px;
 }
 
@@ -405,9 +413,11 @@ textarea {
 }
 
 .pAoption {
-    background-color: var(--bg4);
-    border-color: var(--bg4);
+    background-color: var(--bg2);
+    border-color: var(--bg2);
     border-radius: 5px;
+
+    color: var(--txt1);
 }
 
 .postArea-pollmaker-option {
